fix readme spacing

--- a/sass/components/_figure.scss
+++ b/sass/components/_figure.scss
@@ -4,6 +4,7 @@
     align-items: center;
 
     margin: 2rem;
+    margin-top: 0;
     padding-bottom: 2rem;
 
     &__img {
